--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Roboto;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
 body {
@@ -61,12 +61,10 @@ ul li {
 
 .right {
     flex: 2;
-    background-color: grey;
     display: flex;
     justify-content: center;
-    align-items: center;
-    border: 5px solid royalblue;
-    border-radius: 8px;
+    align-items: start;
+
 }
 
 .left button {
@@ -83,6 +81,14 @@ ul li {
 
 .left p {
     font-size: 25px;
+}
+
+.right img {
+    max-width: 100%;
+    height: auto;
+    border: 4px solid royalblue;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
 /*SECOND LAYOUT*/
@@ -128,6 +134,9 @@ ul li {
 }
 
 /*THIRD LAYOUT*/
+.color {
+    background-color: lightgray;
+}
 
 .quote {
     padding: 120px 0px 120px 0px;
