--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ ul li {
     border: 4px solid royalblue;
     border-radius: 5px;
     box-sizing: border-box;
+    object-fit: cover;
 }
 
 /*SECOND LAYOUT*/
@@ -124,6 +125,7 @@ ul li {
     width: 300px;
     height: 200px;
     margin-bottom: 10px;
+    object-fit: cover;
 }
 
 .image p {
